[gd_scene load_steps=10 format=3 uid="uid://cy0057jmhpxd4"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_whfqp"]
[ext_resource type="PackedScene" uid="uid://bmlp1qp51nqbr" path="res://Scenes/Terrains/SafeZone.tscn" id="3_0f0qq"]
[ext_resource type="Texture2D" uid="uid://c736ecibtl5fo" path="res://Art/TileSets.png" id="3_lkqpa"]
[ext_resource type="PackedScene" uid="uid://d06lyequh00bd" path="res://Scenes/Character/Player.tscn" id="4_0tpct"]
[ext_resource type="PackedScene" uid="uid://bf1f548lchk5x" path="res://Scenes/NotPlayerCharacters/creature_red_dot.tscn" id="4_8ddj6"]
[ext_resource type="PackedScene" uid="uid://cf7qal4a3k0r3" path="res://Scenes/Buildings/lab_room.tscn" id="4_kn23s"]
[ext_resource type="PackedScene" uid="uid://yhh1g724kmg5" path="res://Scenes/Terrains/Obstacle.tscn" id="4_nm3qp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_seqvo"]
texture = ExtResource("3_lkqpa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
2:6/0 = 0
3:6/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSet" id="TileSet_1eu7n"]
sources/0 = SubResource("TileSetAtlasSource_seqvo")

[node name="Level" type="Node2D"]
script = ExtResource("1_whfqp")

[node name="Terrain" type="Node2D" parent="."]

[node name="Obstacle2" parent="Terrain" instance=ExtResource("4_nm3qp")]
position = Vector2(789, 354)

[node name="Obstacle" parent="Terrain" instance=ExtResource("4_nm3qp")]
position = Vector2(626, 274)

[node name="Obstacle3" parent="Terrain" instance=ExtResource("4_nm3qp")]
position = Vector2(537, 383)

[node name="TileMap" type="TileMap" parent="Terrain"]
tile_set = SubResource("TileSet_1eu7n")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(-196613, 0, 0, -131077, 0, 1, -196612, 65536, 0, -131076, 65536, 1, -196611, 131072, 0, -131075, 131072, 1, -196610, 196608, 0, -131074, 196608, 1, -196609, 131072, 0, -131073, 131072, 1, -262144, 196608, 0, -196608, 196608, 1, -262143, 131072, 0, -196607, 131072, 1, -262142, 196608, 0, -196606, 196608, 1, -262141, 131072, 0, -196605, 131072, 1, -262140, 196608, 0, -196604, 196608, 1, -262139, 131072, 0, -196603, 131072, 1, -262138, 196608, 0, -196602, 196608, 1, -262137, 131072, 0, -196601, 131072, 1, -262136, 196608, 0, -196600, 196608, 1, -262135, 131072, 0, -196599, 131072, 1, -262134, 196608, 0, -196598, 196608, 1, -262133, 131072, 0, -196597, 131072, 1, -262132, 196608, 0, -196596, 196608, 1, -262131, 393216, 0, -196595, 393216, 1, -262130, 458752, 0, -196594, 458752, 1, -131059, 393216, 2, -65523, 393216, 3, -131058, 458752, 2, -65522, 458752, 3, 13, 393216, 2, 65549, 393216, 3, 14, 458752, 2, 65550, 458752, 3, 131085, 393216, 2, 196621, 393216, 3, 131086, 458752, 2, 196622, 458752, 3, 262157, 393216, 2, 327693, 393216, 3, 262158, 458752, 2, 327694, 458752, 3, 393229, 393216, 2, 458765, 393216, 3, 393230, 458752, 2, 458766, 458752, 3, 524301, 0, 2, 589837, 0, 3, 524302, 65536, 2, 589838, 65536, 3, 524303, 131072, 0, 589839, 131072, 1, 524304, 196608, 0, 589840, 196608, 1, 524305, 131072, 0, 589841, 131072, 1, 524306, 196608, 0, 589842, 196608, 1, 524307, 131072, 0, 589843, 131072, 1, 524308, 196608, 0, 589844, 196608, 1, 524309, 131072, 0, 589845, 131072, 1, 524310, 196608, 0, 589846, 196608, 1, 524311, 131072, 0, 589847, 131072, 1, 524312, 196608, 0, 589848, 196608, 1, 524313, 131072, 0, 589849, 131072, 1, 524314, 196608, 0, 589850, 196608, 1, 524315, 393216, 0, 589851, 393216, 1, 524316, 458752, 0, 589852, 458752, 1, 655387, 393216, 2, 720923, 393216, 3, 655388, 458752, 2, 720924, 458752, 3, 786459, 393216, 2, 851995, 393216, 3, 786460, 458752, 2, 851996, 458752, 3, 917531, 393216, 2, 983067, 393216, 3, 917532, 458752, 2, 983068, 458752, 3, 1048603, 393216, 2, 1114139, 393216, 3, 1048604, 458752, 2, 1114140, 458752, 3, 1179675, 393216, 2, 1245211, 393216, 3, 1179676, 458752, 2, 1245212, 458752, 3, 1310747, 131072, 2, 1376283, 131072, 3, 1310748, 196608, 2, 1376284, 196608, 3, 1703943, 0, 2, 1769479, 0, 3, 1703944, 65536, 2, 1769480, 65536, 3, 1703945, 131072, 0, 1769481, 131072, 1, 1703946, 196608, 0, 1769482, 196608, 1, 1703947, 131072, 0, 1769483, 131072, 1, 1703948, 196608, 0, 1769484, 196608, 1, 1703949, 131072, 0, 1769485, 131072, 1, 1703950, 196608, 0, 1769486, 196608, 1, 1703951, 131072, 0, 1769487, 131072, 1, 1703952, 196608, 0, 1769488, 196608, 1, 1703953, 131072, 0, 1769489, 131072, 1, 1703954, 196608, 0, 1769490, 196608, 1, 1703955, 262144, 0, 1769491, 262144, 1, 1703956, 327680, 2, 1769492, 196608, 3, 1572871, 393216, 2, 1638407, 393216, 3, 1572872, 458752, 2, 1638408, 458752, 3, 1441799, 393216, 2, 1507335, 393216, 3, 1441800, 458752, 2, 1507336, 458752, 3, 1310727, 393216, 2, 1376263, 393216, 3, 1310728, 458752, 2, 1376264, 458752, 3, 1179655, 393216, 2, 1245191, 393216, 3, 1179656, 458752, 2, 1245192, 458752, 3, 1048583, 393216, 2, 1114119, 393216, 3, 1048584, 458752, 2, 1114120, 458752, 3, 983047, 262144, 5, 983048, 327680, 5, 917511, 0, 0, 917512, 65536, 0, 917513, 393216, 0, 917514, 458752, 0, 983049, 262144, 1, 983050, 196608, 3, 1179660, 0, 0, 1245196, 0, 1, 1179661, 65536, 0, 1245197, 65536, 1, 1179662, 131072, 0, 1245198, 131072, 1, 1179663, 196608, 0, 1245199, 196608, 1, 1179664, 131072, 0, 1245200, 131072, 1, 1179665, 196608, 0, 1245201, 196608, 1, 1179666, 131072, 0, 1245202, 131072, 1, 1179667, 196608, 0, 1245203, 196608, 1, 1179668, 131072, 0, 1245204, 131072, 1, 1179669, 196608, 0, 1245205, 196608, 1, 1179670, 262144, 0, 1245206, 262144, 1, 1179671, 458752, 0, 1245207, 196608, 3, 589827, 393216, 4, 655363, 393216, 5, 589828, 458752, 4, 655364, 458752, 5, 458755, 393216, 2, 524291, 393216, 3, 458756, 458752, 2, 524292, 458752, 3, 327683, 393216, 2, 393219, 393216, 3, 327684, 458752, 2, 393220, 458752, 3, 196611, 393216, 2, 262147, 393216, 3, 196612, 458752, 2, 262148, 458752, 3, 589829, 131072, 0, 655365, 131072, 1, 589830, 196608, 0, 655366, 196608, 1, 589831, 131072, 0, 655367, 131072, 1, 589832, 196608, 0, 655368, 196608, 1, 589833, 262144, 0, 655369, 262144, 1, 589826, 65536, 0, 655362, 65536, 1, 589825, 0, 0, 655361, 0, 1, 589834, 327680, 2, 655370, 196608, 3, 65539, 262144, 2, 131075, 262144, 3, 65540, 327680, 2, 131076, 327680, 3, 720899, 393216, 2, 786435, 393216, 3, 720900, 458752, 2, 786436, 458752, 3, 851971, 393216, 2, 917507, 393216, 3, 851972, 458752, 2, 917508, 458752, 3, 983043, 393216, 2, 1048579, 393216, 3, 983044, 458752, 2, 1048580, 458752, 3, 1114115, 393216, 2, 1179651, 393216, 3, 1114116, 458752, 2, 1179652, 458752, 3, 1245187, 393216, 2, 1310723, 393216, 3, 1245188, 458752, 2, 1310724, 458752, 3, 1376259, 393216, 2, 1441795, 393216, 3, 1376260, 458752, 2, 1441796, 458752, 3, 1507331, 131072, 2, 1572867, 131072, 3, 1507332, 196608, 2, 1572868, 196608, 3)

[node name="LabRoom" parent="Terrain" instance=ExtResource("4_kn23s")]
position = Vector2(304, 540)
rotation = -1.5708

[node name="SafeZone" parent="." instance=ExtResource("3_0f0qq")]
position = Vector2(542, 466)

[node name="SnotBallHolder" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("4_0tpct")]

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)

[node name="Creature_RedDot" parent="." instance=ExtResource("4_8ddj6")]
position = Vector2(775, 272)
rotation = 0.107543

[node name="Creature_RedDot2" parent="." instance=ExtResource("4_8ddj6")]
position = Vector2(633, 303)
rotation = 0.169211

[connection signal="PlayerEnterSafeZone" from="SafeZone" to="." method="_on_safe_zone_player_enter_safe_zone"]
[connection signal="snotBall" from="Player" to="." method="_on_player_snot_ball"]
